# TachometerAPI

./: .env.toml  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  daemon.cpp  daemonUdpToWsConverter.cpp  serial  serialToUdpConverter  serialToUdpConverter.cpp  source.sql  tachoAPI  udpClient  udpClient.cpp  udpToWsConverter.cpp
ArchiveAPI/: package-lock.json  server.ts  server_https.ts
archive/: package.json  server.ts  server_https.ts
get_rpm_2/: get_rpm_2.ino
modules/: daemon.cpp  envread.cpp  mysql.cpp  serial.cpp  udp.cpp  ws.cpp
openssl-prefix/src/openssl-stamp/: openssl-gitclone-lastrun.txt
openssl-prefix/tmp/: openssl-cfgcmd.txt  openssl-gitclone.cmake  openssl-gitupdate.cmake
websocketpp-prefix/src/websocketpp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
websocketpp-prefix/src/websocketpp-build/websocketpp/: Makefile  cmake_install.cmake
websocketpp-prefix/tmp/: websocketpp-gitclone.cmake  websocketpp-gitupdate.cmake
websocketpp/src/websocketpp-build/: CMakeCache.txt  Makefile  cmake_install.cmake
websocketpp/src/websocketpp-build/websocketpp/: Makefile  cmake_install.cmake
websocketpp/src/websocketpp-stamp/: websocketpp-gitinfo.txt
websocketpp/tmp/: websocketpp-gitclone.cmake  websocketpp-gitupdate.cmake
wsTachometer/: development.js  package-lock.json  package.json
wsTachometer/src/: ArchiveDemo.jsx  Gauge.css  Gauge.jsx  WsDebugger.jsx  WsTachometer.css  WsTachometer.jsx  customHooks.js  index.html  index.jsx  utils.js
